<resources>
    <string name="app_name">MealTime</string>
    <string name="Rellenalossiguientesdatospersonales">Rellena los siguientes datos personales:</string>
    <string name="Sexo">Sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="edad">Edad:</string>
    <string name="altura">Altura:</string>
    <string name="peso">Peso:</string>
    <string name="Comodeactivoeresadiario">¿Como de activo eres a diario?</string>
    <string name="Nadaactivo">Nada activo</string>
    <string name="Sedentariopocoactivo">Sedentario, poco activo</string>
    <string name="Activoomoderadamenteactivo">Activo o moderadamente activo</string>
    <string name="Muyactivo">Muy activo</string>
    <string name="Paracocinarutilizasaceitedeoliva">¿Para cocinar utilizas aceite de oliva?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="continuar">Continuar</string>
    <string name="Seleccioneeltipodedietaaseguir">Seleccione el tipo de dieta a seguir:</string>
    <string name="Balanceada">Balanceada</string>
    <string name="altaenproteinas">Alta en proteinas</string>
    <string name="bajaengrasas">Baja en grasas</string>
    <string name="bajaencarbohidratos">Baja en carbohidratos</string>
    <string name="otrascaracteristicasdetudieta">Otras características de tu diata:</string>
    <string name="vegetariana">Vegetariana</string>
    <string name="vegana">Vegana</string>
    <string name="sinalcohol">Sin alcohol</string>
    <string name="reducidaenazucar">Reducida en azúcar</string>
    <string name="sinnueces">Sin nueces</string>
    <string name="sincacahuetes">Sin cacahuetes</string>
    <string name="guardar">Guardar</string>
    <string name="nombre">Nombre</string>
    <string name="eligeunaopción">Bienvenido a MealTime</string>
    <string name="modificardatos">Modificar datos personales</string>
    <string name="entrar">Entrar</string>
    <string name="consultarcalorias">Consultar calorías</string>
    <string name="MenúSemanal">Menú Semanal</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miércoles">Miércoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sábado">Sábado</string>
    <string name="Domingo">Domingo</string>
    <string name="Primero">Primero</string>
    <string name="Segundo">Segundo</string>
    <string name="Postre">Postre</string>
    <string name="Ingredientes">Ingredientes:</string>
    <string name="depostreelija">De postre elija la pieza de fruta que prefiera (una manzana, un platano, una mandarína, etc). </string>
    <string name="Calorías">Calorías:</string>
    <string name="Proteínas">Proteínas:</string>
    <string name="Carbohidratos">Carbohidratos:</string>
    <string name="Grasas">Grasas:</string>
    <string name="Preparación">Preparación</string>
    <string name="Tablanutricional">Tabla nutricional</string>
    <string name="listadelacompra">Lista de la compra</string>
    <string name="entreparentesis">Entre paréntesis se especifican las cantidades en gramos para una persona</string>
    <string name="despensa">Despensa</string>
    <string name="añadiraladespensa">Añadir a la despensa</string>
    <string name="gramos">Gramos</string>
    <string name="anadir">Añadir</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="check_toast" translatable="false">%1$d:%2$s</string>
    <string name="estaenladespensa">¿Está en la despensa?</string>
    <string name="sielingredienteseencuentra">Si el ingrediente se encuentra en la despensa seleccionelo:</string>
    <string name="anadirnuevo">Añadir nuevo</string>
    <string name="seleccioneunadelassiguientes">Seleccione una de las siguientes opciones:</string>
    <string name="buscarreceta">Buscar receta</string>
    <string name="buscar">Buscar</string>
    <string name="menu">Menu</string>
    <string name="caloriasdiarias">Calorias diarias:</string>
    <string name="crearmenu">Crear Menú</string>
    <string name="frutaaeleccion">Fruta a elección</string>
    <!--string name="app_name"></string>
    <string name="app_name"></string>
    <string name="app_name"></string>
    <string name="app_name"></string-->


</resources>
