<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recoger_datos1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/Rellenalossiguientesdatospersonales"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/Sexo"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNombre" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/edad"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/altura"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/peso"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/Comodeactivoeresadiario"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <EditText
                    android:id="@+id/etEdad"
                    android:layout_width="101dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="number"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <EditText
                    android:id="@+id/etAltura"
                    android:layout_width="101dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="cm"
                    android:inputType="number"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/etEdad" />

                <EditText
                    android:id="@+id/etPeso"
                    android:layout_width="101dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="kg"
                    android:inputType="number|numberDecimal"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/etAltura" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="Siguientee"
                    android:text="@string/continuar"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.WindowTitle"
                    android:textSize="30sp"
                    android:textColor="@android:color/white"
                    app:backgroundTint="#e6a34b"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.466"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="111dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6">

                    <RadioButton
                        android:id="@+id/rbHombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hombre"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbMujer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:duplicateParentState="false"
                        android:text="@string/mujer"
                        android:textSize="18sp" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <RadioButton
                        android:id="@+id/rbAct0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Nadaactivo"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbAct1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Sedentariopocoactivo"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbAct2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Activoomoderadamenteactivo"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rbAct3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Muyactivo"
                        android:textSize="18sp" />
                </RadioGroup>

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />


            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>